@@ -109,7 +109,7 @@
 <!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.22 (2024/5/9):<br>
 <!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.22.exe">Windows版 Polaris Engine</a><br>
 <!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.22.dmg">Mac版 Polaris Engine</a><br>
-<a href="/dl/install-polaris-engine.sh">Linux/BSD版 Polaris Engine</a><br>
+<a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
 <a href="https://apps.apple.com/jp/app/polaris-engine/id6496852993">iOS版 Polaris Engine [App Store]</a> (iCloud Driveが必要)<br>
